# finance-rag

./: .env.example  .gitignore  LICENSE  README.md  config.py  config.yaml  dev.sh  ingest.py  main.py  pyproject.toml  query.py  requirements.txt
api/: main.py
frontend/: package-lock.json  package.json
frontend/app/: app.css  types.ts
frontend/app/components/: ChatInput.tsx  ChatMessage.tsx  FilterBar.tsx
frontend/app/routes/: home.tsx
src/data/test_ingest/: AMZN_10-K_0000320193-25-000079.xlsx
src/data_collection/: sec_scrapper.py
src/evaluation/: ablation_eval.ipynb  ablation_study.py  generate_dataset.py  llm.py  run_eval.py
src/evaluation/data/: ablation_comparison_results.json  ablation_results.json  ablation_test_set.json  eval_results.json  test_set.json
src/generation/: __init__.py  hybrid_retriever.py  llm.py  models.py  prompts.py  rag_agent.py  reranker.py
src/indexing/: __init__.py  embedder.py  hype_ingestion.py  question_store.py  vector_db_test.ipynb  vector_store.py
src/preprocessing/: chunking.py  document_parser.py  models.py  preprocessing_test.ipynb  question_generator.py
src/test/: create_test_data.py  preprocessing_test.ipynb  qdrant_test.ipynb  sample_query.py
src/utils/: logger.py  models.py  pipeline_logger.py  prompts.py  utils.py
